Fix too long customization value on preview

--- a/_dev/css/components/customization-modal.scss
+++ b/_dev/css/components/customization-modal.scss
@@ -16,6 +16,10 @@
           text-align: right;
         }
 
+        .value {
+          word-wrap: break-word;
+        }
+
         &:last-child {
           padding-bottom: 0;
           border-bottom: 0;
